# ComPair-tracker-FPGA

./: .gitattributes  .gitignore  Makefile  README.md
artifacts/: .gitattributes
cores/AXI_cal_DAC_1.0/: component.xml
cores/AXI_cal_pulse_1.0/: component.xml
cores/AXI_cal_pulse_1.1/: component.xml
cores/axi_cal_pulse/: AXI_cal_DAC_v1_0.vhd  AXI_cal_DAC_v1_0_S00_AXI.vhd  cal_dac_ctl_v1_0.vhd  cal_dac_ctl_v1_0_S00_AXI.vhd  cal_pulse.vhd  spi_cal_dac.vhd
cores/dac121s101_1.0/: component.xml
cores/event_id_gen_1.0/: component.xml
cores/sync_vata_distn_1.0/: component.xml
cores/vata460p3/: vata460p3_interface.vhd
cores/vata_460p3/: component.xml  fifo_to_stream.vhd  int_cal_toggle.vhd  vata_460p3_axi_interface_v1_0_S00_AXI.vhd  (+2 more)
scripts/: add_vata_to_bd.tcl  compile.tcl  connect_gpio_to_vata_ports.tcl  create_vata_iface.tcl  dbe_aliveness_module_ports_connections.tcl  env.bat  export_hardware.tcl  export_hardware_dbe.tcl  save_bd.tcl  save_dbe_bd.tcl  save_trenz_design.tcl  save_zybo_design.tcl  sdk_project.tcl  sdk_project_dbe.tcl  setup_dbe_aliveness.tcl  setup_project.tcl  setup_trenz_breakout.tcl
src/petalinux/apps/silayer-lib/: .gitignore  Makefile  README.md  configure.ac
src/petalinux/apps/silayer-lib/include/: cal_ctrl.hpp  dac_ctrl.hpp  sync_ctrl.hpp  vata_constants.hpp  vata_ctrl.hpp
src/petalinux/apps/silayer-lib/src/: Makefile.am  cal_ctrl.cpp  dac_ctrl.cpp  sync_ctrl.cpp  vata_ctrl.cpp
timing_diagram/: README.txt  Sean_WaveDrom.txt  Syntax.txt  VATA460.3_figure6.txt  VATA460.3_figure7.txt  VATA460.3_figure8.txt  wavedrom_src.txt
(+405 files in other folders)
