AC_INIT([Silicon layer control library], [1.0], [Lucas Parker <lpp@lanl.gov>] [sictrl])
AC_CONFIG_SRCDIR([src/vata_ctrl.cpp]) ## Safety check
AC_CONFIG_AUX_DIR([build-aux]) ## Install auxiliary build tools here

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CXX
AC_PROG_INSTALL

##LT_INIT([disable-shared enable-static])
LT_INIT

AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
